# holodeck-cpp

./: CMakeLists.txt  README
res/configs/: ceiling.json  cube.json  floor.json  lightcube.json  wall1.json  wall2.json  wall3.json  wall4.json
src/: Application.cpp  Buffer.cpp  BufferDescriptor.cpp  CMakeLists.txt  CameraState.cpp  Cube.cpp  EboDescriptor.cpp  Holodeck.cpp  InputState.cpp  JsonConfig.cpp  Mesh.cpp  Model.cpp  Program.cpp  Quad.cpp  Shader.cpp  TextManager.cpp  Texture.cpp  TransformState.cpp  Uniform.cpp  VaoDescriptor.cpp  Vertex.cpp  glad.c  main.cpp
src/CMake/: Findglfw.cmake
src/include/: Application.hpp  Attributes.hpp  Buffer.hpp  BufferDescriptor.hpp  CameraState.hpp  ConfigurationManager.hpp  Cube.hpp  EboDescriptor.hpp  Exception.hpp  Holodeck.hpp  InputState.hpp  JsonConfig.hpp  Mesh.hpp  Model.hpp  Program.hpp  Quad.hpp  Shader.hpp  TextManager.hpp  Texture.hpp  TransformState.hpp  Uniform.hpp  VaoDescriptor.hpp  Vertex.hpp  application.hpp
src/include/glad/: glad.h
src/shaders/: cube.frag  cube.vert  floor.frag  floor.vert  light_cube.frag  light_cube.vert  paralellogram.frag  paralellogram.vert
